Clean up makefile and fix errors

--- a/assn2/Makefile
+++ b/assn2/Makefile
@@ -1,6 +1,6 @@
 build:
-	gcc --std=gnu99 -O3 -Wall -lm -lpthread jacobi/jacobi_solver.c jacobi/compute_gold.c -o jacobi_solver
-	gcc --std=gnu99 -O3 -Wall -lm -lpthread gaussian/gauss_eliminate.c gaussian/compute_gold.c -o gauss_eliminate
+	gcc -std=gnu99 -O3 -Wall -lm -lpthread jacobi/jacobi_solver.c jacobi/compute_gold.c -o jacobi_solver
+	gcc -std=gnu99 -O3 -Wall -lm -lpthread gaussian/gauss_eliminate.c gaussian/compute_gold.c -o gauss_eliminate
 
 jacobi: build
 	./jacobi_solver 512
