Finishes up particle swarm optimizer

--- a/assn3/particle_swarm/Makefile
+++ b/assn3/particle_swarm/Makefile
@@ -1,14 +1,14 @@
 # Simple makefile for building PSO on xunil
 # Author: Naga Kandasamy, May 5, 2020
 
-CC		:= /usr/bin/gcc
-CCFLAGS := -fopenmp -std=c99 -Wall -O3 
+CC := /usr/bin/gcc
+CCFLAGS :=-fopenmp -std=c99 -Wall -O3 
 LDLIBS := -lm
 
 all: pso
 
 pso: pso.o pso_utils.o optimize_gold.o optimize_using_omp.o 
-	$(CC) -o pso pso.o pso_utils.o optimize_gold.o optimize_using_omp.o $(LDLIBS)
+	$(CC) -o pso pso.o pso_utils.o optimize_gold.o optimize_using_omp.o $(CCFLAGS) $(LDLIBS)
 
 pso.o: pso.c pso.h
 	$(CC) -c pso.c $(CCFLAGS)
