--- a/assn4/Makefile
+++ b/assn4/Makefile
@@ -14,8 +14,8 @@
 # .bash_profile so that you can compile and run without using this makefile.
 
 NVCCFLAGS	:= -O3 -gencode arch=compute_60,code=sm_60
-NVCC		:= /usr/local/cuda/bin/nvcc
-LD_LIBRARY_PATH	:= /usr/local/cuda/lib64
+NVCC		:= /opt/cuda/bin/nvcc #/usr/local/cuda/bin/nvcc
+LD_LIBRARY_PATH	:= /opt/cuda/lib64 #/usr/local/cuda/lib64
 
 all: blur_filter
 
